:adhesive_bandage: chores: update file to get better sonarQube Quality